--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <p><b>Email:</b> skuch001@odu.edu</p>
 </div>
 
+<p>Please download my resume by clicking on the link below..</p>
 <a href="https://github.com/sairajGit1997/resume/raw/main/SairajResume.pdf" class="download" title="Download PDF">Download CV</a>
 
 </body>
