--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <h1>SAIRAJ KUCHANA</h1>
 
 <h3>DETAILS:</h3>
-<h4>ADDRESS:</h4>
 <div>
 <p>1049 W 49th Street</p>
 <p>Old Dominion University</p>
@@ -15,7 +14,7 @@
 </div>
 
 <p>Please download my resume by clicking on the link below..</p>
-<a href="https://github.com/sairajGit1997/resume/raw/main/SairajResume.pdf" class="download" title="Download PDF">Download CV</a>
+<a href="https://github.com/sairajGit1997/resume/raw/main/SairajResume.pdf" class="download" title="Download PDF">Download Resume</a>
 
 </body>
 </html>
